NumericUpDown の上下が現在選択している桁を上下するように

--- a/AnimateCaptionPlugin/AnimateCaptionPlugin.csproj
+++ b/AnimateCaptionPlugin/AnimateCaptionPlugin.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MotionUtil\Framework\Controls\IncrementSelectionNumericUpDown.cs">
+      <Link>Framework\Controls\IncrementSelectionNumericUpDown.cs</Link>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="..\MotionUtil\Framework\FinallyBlock.cs">
       <Link>Framework\FinallyBlock.cs</Link>
     </Compile>
