--- a/ApplyRotationPlugin/ApplyRotationPlugin.csproj
+++ b/ApplyRotationPlugin/ApplyRotationPlugin.csproj
@@ -53,6 +53,10 @@
     <Compile Include="..\motionutil\framework\CommandBase.cs">
       <Link>Framework\CommandBase.cs</Link>
     </Compile>
+    <Compile Include="..\MotionUtil\Framework\Controls\IncrementSelectionNumericUpDown.cs">
+      <Link>Framework\Controls\IncrementSelectionNumericUpDown.cs</Link>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="..\MotionUtil\Framework\EnableScreenObjectBlock.cs">
       <Link>Framework\EnableScreenObjectBlock.cs</Link>
     </Compile>
