GetMmdTransformationPlugin: x64 版 MMM に対応

--- a/GetMmdTransformationPlugin/GetMmdTransformationPlugin.csproj
+++ b/GetMmdTransformationPlugin/GetMmdTransformationPlugin.csproj
@@ -22,7 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,7 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
@@ -90,6 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Resources\GetMmdTransformation20.png" />
     <Content Include="Resources\GetMmdTransformation32.png" />
+    <Content Include="Resources\GetMmdTransformationContainer.exe" />
     <None Include="Resources\GetMmdTransformationProxy64.dll" />
     <None Include="Resources\GetMmdTransformationContainer64.exe" />
     <None Include="Resources\GetMmdTransformationProxy.dll" />
