--- a/ApplyOffsetPlugin/ApplyOffsetPlugin.csproj
+++ b/ApplyOffsetPlugin/ApplyOffsetPlugin.csproj
@@ -1,112 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E31B8BEC-E8F8-4513-9ADC-43AE641F1A7F}</ProjectGuid>
+    <TargetFramework>net461</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Linearstar.MikuMikuMoving.ApplyOffsetPlugin</RootNamespace>
-    <AssemblyName>ApplyOffsetPlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DxMath, Version=1.0.4012.33355, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>X:\mmd\tools\MikuMikuMoving\System\DxMath.dll</HintPath>
-    </Reference>
-    <Reference Include="MikuMikuPlugin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>X:\mmd\tools\MikuMikuMoving\System\MikuMikuPlugin.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\MotionUtil\Framework\CommandBase.cs">
-      <Link>Framework\CommandBase.cs</Link>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\Controls\IncrementSelectionNumericUpDown.cs">
-      <Link>Framework\Controls\IncrementSelectionNumericUpDown.cs</Link>
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\MathHelper.cs">
-      <Link>Framework\MathHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\PluginBase.cs">
-      <Link>Framework\PluginBase.cs</Link>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\UndoBlock.cs">
-      <Link>Framework\UndoBlock.cs</Link>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\Util.cs">
-      <Link>Framework\Util.cs</Link>
-    </Compile>
-    <Compile Include="ApplyOffsetCommand.cs" />
-    <Compile Include="ApplyOffsetForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ApplyOffsetForm.Designer.cs">
-      <DependentUpon>ApplyOffsetForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ApplyOffsetForm.resx">
-      <DependentUpon>ApplyOffsetForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ApplyOffset20.png" />
-    <None Include="Resources\ApplyOffset32.png" />
     <Content Include="ApplyOffsetPlugin.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Resources\ApplyOffset20.png" LogicalName="Icon20" />
+    <EmbeddedResource Include="Resources\ApplyOffset32.png" LogicalName="Icon32" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)MMMInstallPlugin $(TargetPath)</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <Import Project="..\PluginFramework\PluginFramework.projitems" Label="Shared" />
 </Project>
