--- a/ApplyRotationPlugin/ApplyRotationPlugin.csproj
+++ b/ApplyRotationPlugin/ApplyRotationPlugin.csproj
@@ -1,118 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6983BC0C-125A-4813-8D8D-4EA833780FAC}</ProjectGuid>
+    <TargetFramework>net461</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Linearstar.MikuMikuMoving.ApplyRotationPlugin</RootNamespace>
-    <AssemblyName>ApplyRotationPlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="DxMath">
-      <HintPath>X:\mmd\tools\MikuMikuMoving\System\DxMath.dll</HintPath>
-    </Reference>
-    <Reference Include="MikuMikuPlugin">
-      <HintPath>X:\mmd\tools\MikuMikuMoving\System\MikuMikuPlugin.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\motionutil\framework\CommandBase.cs">
-      <Link>Framework\CommandBase.cs</Link>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\Controls\IncrementSelectionNumericUpDown.cs">
-      <Link>Framework\Controls\IncrementSelectionNumericUpDown.cs</Link>
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="..\MotionUtil\Framework\EnableScreenObjectBlock.cs">
-      <Link>Framework\EnableScreenObjectBlock.cs</Link>
-    </Compile>
-    <Compile Include="..\motionutil\framework\MathHelper.cs">
-      <Link>Framework\MathHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\motionutil\framework\PluginBase.cs">
-      <Link>Framework\PluginBase.cs</Link>
-    </Compile>
-    <Compile Include="..\motionutil\framework\UndoBlock.cs">
-      <Link>Framework\UndoBlock.cs</Link>
-    </Compile>
-    <Compile Include="..\motionutil\framework\Util.cs">
-      <Link>Framework\Util.cs</Link>
-    </Compile>
-    <Compile Include="ApplyRotationForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ApplyRotationForm.Designer.cs">
-      <DependentUpon>ApplyRotationForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ApplyRotationPlugin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ApplyRotationForm.resx">
-      <DependentUpon>ApplyRotationForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
   <ItemGroup>
     <Content Include="ApplyRotationPlugin.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\Origin.png" />
-    <None Include="Resources\ApplyRotationPlugin32.png" />
-    <None Include="Resources\ApplyRotationPlugin20.png" />
+    <EmbeddedResource Include="Resources\ApplyRotationPlugin20.png" LogicalName="Icon20" />
+    <EmbeddedResource Include="Resources\ApplyRotationPlugin32.png" LogicalName="Icon32" />
+    <EmbeddedResource Include="Resources\Origin.png" LogicalName="Origin" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)MMMInstallPlugin $(TargetPath)</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <Import Project="..\PluginFramework\PluginFramework.projitems" Label="Shared" />
 </Project>
