--- a/AnimateCaptionPlugin/AnimateCaptionPlugin.csproj
+++ b/AnimateCaptionPlugin/AnimateCaptionPlugin.csproj
@@ -8,6 +8,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release</Configurations>
+    <Version>0.3</Version>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="AnimateCaptionPlugin.txt">
