--- a/BeatBasedCopyPlugin/BeatBasedCopyPlugin.csproj
+++ b/BeatBasedCopyPlugin/BeatBasedCopyPlugin.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release</Configurations>
+    <Version>0.3</Version>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="BeatBasedCopyPlugin.txt">
