--- a/GetMmdTransformationPlugin/GetMmdTransformationPlugin.csproj
+++ b/GetMmdTransformationPlugin/GetMmdTransformationPlugin.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release</Configurations>
+    <Version>0.7</Version>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="GetMmdTransformationPlugin.txt">
